<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="menu_group_chat">GroupChat</string>
    <string name="menu_feed_back">FeedBack</string>
    <string name="menu_add_friend">AddFriend</string>
    <string name="menu_scan">Scan</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_found">Found</string>
    <string name="tab_me">Me</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
