<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/actionbar_search_icon"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView"/>

    <!--<item-->
        <!--android:id="@+id/action_add"-->
        <!--android:icon="@drawable/actionbar_add_icon"-->
        <!--android:title="@string/action_add"/>-->

    <item
        android:id="@+id/action_group_chat"
        android:icon="@drawable/menu_group_chat_icon"
        android:title="@string/menu_group_chat"/>

    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/menu_add_icon"
        android:title="@string/menu_add_friend"/>

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/men_scan_icon"
        android:title="@string/menu_scan"/>

    <item
        android:id="@+id/action_feed_back"
        android:icon="@drawable/menu_feedback_icon"
        android:title="@string/menu_feed_back"/>
</menu>
